--- a/index.html
+++ b/index.html
@@ -1387,7 +1387,7 @@
       </div>
     </section>
 
-    <section id="pro-com">
+   <section id="pro-com">
   <div class="container">
 
     <div class="container section-title" data-aos="fade-up">
@@ -1400,15 +1400,26 @@
       <div class="col-lg-4 col-md-5">
         <div class="member-info">
 
-          <div class="person">
-            <b>Name 1</b>, <span>Affiliation 1</span>
-          </div>
+          <div class="person"><b>Hoda Allahbakhshi</b>, <span>University of Zurich</span></div>
+          <div class="person"><b>Clio Andris</b>, <span>Georgia Institute of Technology</span></div>
+          <div class="person"><b>Nathalie Aussenac-Gilles</b>, <span>Centre national de la recherche scientifique (CNRS)</span></div>
+          <div class="person"><b>Crystal Bae</b>, <span>University of Chicago</span></div>
+          <div class="person"><b>Leila De Floriani</b>, <span>University of Maryland, College Park</span></div>
+          <div class="person"><b>Stef De Sabbata</b>, <span>University of Leicester</span></div>
+          <div class="person"><b>Urska Demsar</b>, <span>University of St. Andrews</span></div>
+          <div class="person"><b>Matt Duckham</b>, <span>Royal Melbourne Institute of Technology</span></div>
+          <div class="person"><b>Somayeh Dodge</b>, <span>University of California</span></div>
+          <div class="person"><b>Vanessa Brum-Bastos</b>, <span>University of Canterbury</span></div>
+          <div class="person"><b>Stefano Borgo</b>, <span>Consiglio Nazionale delle Ricerche</span></div>
+          <div class="person"><b>Boyan Brodaric</b>, <span>Natural Resources Canada</span></div>
+          <div class="person"><b>Guoray Cai</b>, <span>Pennsylvania State University</span></div>
+          <div class="person"><b>Gilberto Camara</b>, <span>Instituto Nacional de Pesquisas Espaciais</span></div>
+          <div class="person"><b>Adrijana Car</b>, <span>Fachhochschule Kärnten</span></div>
+          <div class="person"><b>Christophe Claramunt</b>, <span>Naval Academy Research Institute</span></div>
+          <div class="person"><b>Eliseo Clementini</b>, <span>University of Aquila</span></div>
+          <div class="person"><b>Christian Kray</b>, <span>University of Münster</span></div>
+          <div class="person"><b>Andrew Crooks</b>, <span>State University of New York at Buffalo</span></div>
 
-          <div class="person">
-            <b>Name 2</b>, <span>Affiliation 2</span>
-          </div>
-
-          <!-- repeat until ~24 names -->
         </div>
       </div>
 
@@ -1416,15 +1427,26 @@
       <div class="col-lg-4 col-md-5">
         <div class="member-info">
 
-          <div class="person">
-            <b>Name 25</b>, <span>Affiliation 25</span>
-          </div>
+          <div class="person"><b>Gamze Dane</b>, <span>Eindhoven University of Technology</span></div>
+          <div class="person"><b>Géraldine DEL Mondo</b>, <span>Laboratoire d'Informatique, de Traitement de l'Information et des Systèmes</span></div>
+          <div class="person"><b>Gabriele Filomena</b>, <span>University of Liverpool</span></div>
+          <div class="person"><b>Zoe Falomir</b>, <span>Umea University</span></div>
+          <div class="person"><b>Maria M. Hedblom</b>, <span>Universität Bremen</span></div>
+          <div class="person"><b>Christopher Hilton</b>, <span>Technische Universität Berlin</span></div>
+          <div class="person"><b>Arvid Horned</b>, <span>Umea University</span></div>
+          <div class="person"><b>Yingjie Hu</b>, <span>State University of New York at Buffalo</span></div>
+          <div class="person"><b>Antoni Moore</b>, <span>University of Otago</span></div>
+          <div class="person"><b>Jeremy Morley</b>, <span>University College London</span></div>
+          <div class="person"><b>Franz-Benjamin Mocnik</b>, <span>Paris Lodron Universität Salzburg</span></div>
+          <div class="person"><b>Daniel R. Montello</b>, <span>University of California</span></div>
+          <div class="person"><b>Gerhard Navratil</b>, <span>Technische Universität Wien</span></div>
+          <div class="person"><b>Eva Nuhn</b>, <span>Universität Augsburg</span></div>
+          <div class="person"><b>Mark Gahegan</b>, <span>University of Auckland</span></div>
+          <div class="person"><b>Kai-Florian Richter</b>, <span>Umea University</span></div>
+          <div class="person"><b>Rui Li</b>, <span>State University of New York at Albany</span></div>
+          <div class="person"><b>Bernd Ludwig</b>, <span>Universität Regensburg</span></div>
+          <div class="person"><b>John G. Stell</b>, <span>University of Leeds</span></div>
 
-          <div class="person">
-            <b>Name 26</b>, <span>Affiliation 26</span>
-          </div>
-
-          <!-- repeat -->
         </div>
       </div>
 
@@ -1432,15 +1454,26 @@
       <div class="col-lg-4 col-md-5">
         <div class="member-info">
 
-          <div class="person">
-            <b>Name 49</b>, <span>Affiliation 49</span>
-          </div>
+          <div class="person"><b>Markus Kattenbeck</b>, <span>Technische Universität Wien</span></div>
+          <div class="person"><b>Peter Kiefer</b>, <span>ETH Zurich</span></div>
+          <div class="person"><b>Alexander Klippel</b>, <span>Wageningen University and Research</span></div>
+          <div class="person"><b>Manolis Koubarakis</b>, <span>National and Kapodistrian University of Athens</span></div>
+          <div class="person"><b>Krzysztof Janowicz</b>, <span>Universität Vienna</span></div>
+          <div class="person"><b>Henrikki Tenkanen</b>, <span>Aalto University</span></div>
+          <div class="person"><b>Sara Fabrikant</b>, <span>University of Zurich</span></div>
+          <div class="person"><b>Sara Migliorini</b>, <span>University of Verona</span></div>
+          <div class="person"><b>Tabea Sonnenschein</b>, <span>Utrecht University</span></div>
+          <div class="person"><b>Saskia Kuliga</b>, <span>Deutsches Zentrum für Neurodegenerative Erkrankungen</span></div>
+          <div class="person"><b>Ross Purves</b>, <span>University of Zurich</span></div>
+          <div class="person"><b>Qi Ying</b>, <span>University of Zurich</span></div>
+          <div class="person"><b>Reinhard Moratz</b>, <span>Westfälische Wilhelms-Universität Münster</span></div>
+          <div class="person"><b>René Westerholt</b>, <span>TU Dortmund</span></div>
+          <div class="person"><b>Stephan Winter</b>, <span>University of Melbourne</span></div>
+          <div class="person"><b>Till Mossakowski</b>, <span>Universität Osnabrück</span></div>
+          <div class="person"><b>Toru Ishikawa</b>, <span>Toyo University</span></div>
+          <div class="person"><b>Tumasch Reichenbacher</b>, <span>University of Zurich</span></div>
+          <div class="person"><b>Zhangyu Wang</b>, <span>University of Maine System</span></div>
 
-          <div class="person">
-            <b>Name 50</b>, <span>Affiliation 50</span>
-          </div>
-
-          <!-- repeat until 72 -->
         </div>
       </div>
 
