--- a/index.html
+++ b/index.html
@@ -1399,81 +1399,87 @@
       <!-- Column 1 -->
       <div class="col-lg-4 col-md-5">
         <div class="member-info">
-
-          <div class="person"><b>Hoda Allahbakhshi</b>, <span>University of Zurich</span></div>
-          <div class="person"><b>Clio Andris</b>, <span>Georgia Institute of Technology</span></div>
-          <div class="person"><b>Nathalie Aussenac-Gilles</b>, <span>Centre national de la recherche scientifique (CNRS)</span></div>
-          <div class="person"><b>Crystal Bae</b>, <span>University of Chicago</span></div>
-          <div class="person"><b>Leila De Floriani</b>, <span>University of Maryland, College Park</span></div>
-          <div class="person"><b>Stef De Sabbata</b>, <span>University of Leicester</span></div>
-          <div class="person"><b>Urska Demsar</b>, <span>University of St. Andrews</span></div>
-          <div class="person"><b>Matt Duckham</b>, <span>Royal Melbourne Institute of Technology</span></div>
-          <div class="person"><b>Somayeh Dodge</b>, <span>University of California</span></div>
-          <div class="person"><b>Vanessa Brum-Bastos</b>, <span>University of Canterbury</span></div>
-          <div class="person"><b>Stefano Borgo</b>, <span>Consiglio Nazionale delle Ricerche</span></div>
-          <div class="person"><b>Boyan Brodaric</b>, <span>Natural Resources Canada</span></div>
-          <div class="person"><b>Guoray Cai</b>, <span>Pennsylvania State University</span></div>
-          <div class="person"><b>Gilberto Camara</b>, <span>Instituto Nacional de Pesquisas Espaciais</span></div>
-          <div class="person"><b>Adrijana Car</b>, <span>Fachhochschule Kärnten</span></div>
-          <div class="person"><b>Christophe Claramunt</b>, <span>Naval Academy Research Institute</span></div>
-          <div class="person"><b>Eliseo Clementini</b>, <span>University of Aquila</span></div>
-          <div class="person"><b>Christian Kray</b>, <span>University of Münster</span></div>
-          <div class="person"><b>Andrew Crooks</b>, <span>State University of New York at Buffalo</span></div>
-
+          <p><b>Hoda Allahbakhshi</b>, University of Zurich</p>
+          <p><b>Clio Andris</b>, Georgia Institute of Technology</p>
+          <p><b>Nathalie Aussenac-Gilles</b>, Centre national de la recherche scientifique (CNRS)</p>
+          <p><b>Crystal Bae</b>, University of Chicago</p>
+          <p><b>Michela Bertolotto</b>, University College Dublin</p>
+          <p><b>Stefano Borgo</b>, Consiglio Nazionale delle Ricerche</p>
+          <p><b>Boyan Brodaric</b>, Natural Resources Canada</p>
+          <p><b>Vanessa Brum-Bastos</b>, University of Canterbury</p>
+          <p><b>Gilberto Camara</b>, Instituto Nacional de Pesquisas Espaciais</p>
+          <p><b>Adrijana Car</b>, Fachhochschule Kärnten</p>
+          <p><b>Christophe Claramunt</b>, Naval Academy Research Institute</p>
+          <p><b>Eliseo Clementini</b>, University of Aquila</p>
+          <p><b>Andrew Crooks</b>, State University of New York at Buffalo</p>
+          <p><b>Gamze Dane</b>, Eindhoven University of Technology</p>
+          <p><b>Leila De Floriani</b>, University of Maryland, College Park</p>
+          <p><b>Stef De Sabbata</b>, University of Leicester</p>
+          <p><b>Géraldine DEL Mondo</b>, Laboratoire d'Informatique, de Traitement de l'Information et des Systèmes</p>
+          <p><b>Urska Demsar</b>, University of St. Andrews</p>
+          <p><b>Somayeh Dodge</b>, University of California</p>
+          <p><b>Matt Duckham</b>, Royal Melbourne Institute of Technology</p>
         </div>
       </div>
 
       <!-- Column 2 -->
       <div class="col-lg-4 col-md-5">
         <div class="member-info">
-
-          <div class="person"><b>Gamze Dane</b>, <span>Eindhoven University of Technology</span></div>
-          <div class="person"><b>Géraldine DEL Mondo</b>, <span>Laboratoire d'Informatique, de Traitement de l'Information et des Systèmes</span></div>
-          <div class="person"><b>Gabriele Filomena</b>, <span>University of Liverpool</span></div>
-          <div class="person"><b>Zoe Falomir</b>, <span>Umea University</span></div>
-          <div class="person"><b>Maria M. Hedblom</b>, <span>Universität Bremen</span></div>
-          <div class="person"><b>Christopher Hilton</b>, <span>Technische Universität Berlin</span></div>
-          <div class="person"><b>Arvid Horned</b>, <span>Umea University</span></div>
-          <div class="person"><b>Yingjie Hu</b>, <span>State University of New York at Buffalo</span></div>
-          <div class="person"><b>Antoni Moore</b>, <span>University of Otago</span></div>
-          <div class="person"><b>Jeremy Morley</b>, <span>University College London</span></div>
-          <div class="person"><b>Franz-Benjamin Mocnik</b>, <span>Paris Lodron Universität Salzburg</span></div>
-          <div class="person"><b>Daniel R. Montello</b>, <span>University of California</span></div>
-          <div class="person"><b>Gerhard Navratil</b>, <span>Technische Universität Wien</span></div>
-          <div class="person"><b>Eva Nuhn</b>, <span>Universität Augsburg</span></div>
-          <div class="person"><b>Mark Gahegan</b>, <span>University of Auckland</span></div>
-          <div class="person"><b>Kai-Florian Richter</b>, <span>Umea University</span></div>
-          <div class="person"><b>Rui Li</b>, <span>State University of New York at Albany</span></div>
-          <div class="person"><b>Bernd Ludwig</b>, <span>Universität Regensburg</span></div>
-          <div class="person"><b>John G. Stell</b>, <span>University of Leeds</span></div>
-
+          <p><b>Sara Fabrikant</b>, University of Zurich</p>
+          <p><b>Zoe Falomir</b>, Umea University</p>
+          <p><b>Gabriele Filomena</b>, University of Liverpool</p>
+          <p><b>Mark Gahegan</b>, University of Auckland</p>
+          <p><b>Amy Griffin</b>, Royal Melbourne Institute of Technology</p>
+          <p><b>Maria M. Hedblom</b>, Universität Bremen</p>
+          <p><b>Christopher Hilton</b>, Technische Universität Berlin</p>
+          <p><b>Arvid Horned</b>, Umea University</p>
+          <p><b>Yingjie Hu</b>, State University of New York at Buffalo</p>
+          <p><b>Toru Ishikawa</b>, Toyo University</p>
+          <p><b>Krzysztof Janowicz</b>, Universität Vienna</p>
+          <p><b>Markus Kattenbeck</b>, Technische Universität Wien</p>
+          <p><b>Carsten Keßler</b>, Bochum University of Applied Sciences</p>
+          <p><b>Peter Kiefer</b>, ETH Zurich</p>
+          <p><b>Alexander Klippel</b>, Wageningen University and Research</p>
+          <p><b>Manolis Koubarakis</b>, National and Kapodistrian University of Athens</p>
+          <p><b>Christian Kray</b>, University of Münster</p>
+          <p><b>Saskia Kuliga</b>, Deutsches Zentrum für Neurodegenerative Erkrankungen</p>
+          <p><b>Rui Li</b>, State University of New York at Albany</p>
+          <p><b>Bernd Ludwig</b>, Universität Regensburg</p>
         </div>
       </div>
 
       <!-- Column 3 -->
       <div class="col-lg-4 col-md-5">
         <div class="member-info">
-
-          <div class="person"><b>Markus Kattenbeck</b>, <span>Technische Universität Wien</span></div>
-          <div class="person"><b>Peter Kiefer</b>, <span>ETH Zurich</span></div>
-          <div class="person"><b>Alexander Klippel</b>, <span>Wageningen University and Research</span></div>
-          <div class="person"><b>Manolis Koubarakis</b>, <span>National and Kapodistrian University of Athens</span></div>
-          <div class="person"><b>Krzysztof Janowicz</b>, <span>Universität Vienna</span></div>
-          <div class="person"><b>Henrikki Tenkanen</b>, <span>Aalto University</span></div>
-          <div class="person"><b>Sara Fabrikant</b>, <span>University of Zurich</span></div>
-          <div class="person"><b>Sara Migliorini</b>, <span>University of Verona</span></div>
-          <div class="person"><b>Tabea Sonnenschein</b>, <span>Utrecht University</span></div>
-          <div class="person"><b>Saskia Kuliga</b>, <span>Deutsches Zentrum für Neurodegenerative Erkrankungen</span></div>
-          <div class="person"><b>Ross Purves</b>, <span>University of Zurich</span></div>
-          <div class="person"><b>Qi Ying</b>, <span>University of Zurich</span></div>
-          <div class="person"><b>Reinhard Moratz</b>, <span>Westfälische Wilhelms-Universität Münster</span></div>
-          <div class="person"><b>René Westerholt</b>, <span>TU Dortmund</span></div>
-          <div class="person"><b>Stephan Winter</b>, <span>University of Melbourne</span></div>
-          <div class="person"><b>Till Mossakowski</b>, <span>Universität Osnabrück</span></div>
-          <div class="person"><b>Toru Ishikawa</b>, <span>Toyo University</span></div>
-          <div class="person"><b>Tumasch Reichenbacher</b>, <span>University of Zurich</span></div>
-          <div class="person"><b>Zhangyu Wang</b>, <span>University of Maine System</span></div>
-
+          <p><b>Ed Manley</b>, University of Leeds</p>
+          <p><b>Grant McKenzie</b>, McGill University</p>
+          <p><b>Sara Migliorini</b>, University of Verona</p>
+          <p><b>Franz-Benjamin Mocnik</b>, Paris Lodron Universität Salzburg</p>
+          <p><b>Daniel R. Montello</b>, University of California</p>
+          <p><b>Antoni Moore</b>, University of Otago</p>
+          <p><b>Reinhard Moratz</b>, Westfälische Wilhelms-Universität Münster</p>
+          <p><b>Jeremy Morley</b>, University College London</p>
+          <p><b>Gerhard Navratil</b>, Technische Universität Wien</p>
+          <p><b>Eva Nuhn</b>, Universität Augsburg</p>
+          <p><b>Ross Purves</b>, University of Zurich</p>
+          <p><b>Tumasch Reichenbacher</b>, University of Zurich</p>
+          <p><b>Kai-Florian Richter</b>, Umea University</p>
+          <p><b>Johannes Scholz</b>, Paris Lodron Universität Salzburg</p>
+          <p><b>Angela Schwering</b>, University of Münster</p>
+          <p><b>Tabea Sonnenschein</b>, Utrecht University</p>
+          <p><b>Emmanuel Stefanakis</b>, University of Calgary</p>
+          <p><b>John G. Stell</b>, University of Leeds</p>
+          <p><b>Kathleen Stewart</b>, University of Maryland, College Park</p>
+          <p><b>Henrikki Tenkanen</b>, Aalto University</p>
+          <p><b>Nico Van de Weghe</b>, Universiteit Gent</p>
+          <p><b>Judith Verstegen</b>, Utrecht University</p>
+          <p><b>Zhangyu Wang</b>, University of Maine System</p>
+          <p><b>René Westerholt</b>, TU Dortmund</p>
+          <p><b>Stephan Winter</b>, University of Melbourne</p>
+          <p><b>Qi Ying</b>, University of Zurich</p>
+          <p><b>Donatella Zingaro</b>, University of Zurich</p>
+          <p><b>Rui Zhu</b>, University of Bristol</p>
+          <p><b>Chenyu Zuo</b>, Universität Augsburg</p>
         </div>
       </div>
 
