--- a/index.html
+++ b/index.html
@@ -1387,7 +1387,7 @@
       </div>
     </section>
 
-   <section id="pro-com">
+  <section id="pro-com">
   <div class="container">
 
     <div class="container section-title" data-aos="fade-up">
@@ -1399,93 +1399,94 @@
       <!-- Column 1 -->
       <div class="col-lg-4 col-md-5">
         <div class="member-info">
-          <p><b>Hoda Allahbakhshi</b>, University of Zurich</p>
-          <p><b>Clio Andris</b>, Georgia Institute of Technology</p>
-          <p><b>Nathalie Aussenac-Gilles</b>, Centre national de la recherche scientifique (CNRS)</p>
-          <p><b>Crystal Bae</b>, University of Chicago</p>
-          <p><b>Michela Bertolotto</b>, University College Dublin</p>
-          <p><b>Stefano Borgo</b>, Consiglio Nazionale delle Ricerche</p>
-          <p><b>Boyan Brodaric</b>, Natural Resources Canada</p>
-          <p><b>Vanessa Brum-Bastos</b>, University of Canterbury</p>
-          <p><b>Gilberto Camara</b>, Instituto Nacional de Pesquisas Espaciais</p>
-          <p><b>Adrijana Car</b>, Fachhochschule Kärnten</p>
-          <p><b>Christophe Claramunt</b>, Naval Academy Research Institute</p>
-          <p><b>Eliseo Clementini</b>, University of Aquila</p>
-          <p><b>Andrew Crooks</b>, State University of New York at Buffalo</p>
-          <p><b>Gamze Dane</b>, Eindhoven University of Technology</p>
-          <p><b>Leila De Floriani</b>, University of Maryland, College Park</p>
-          <p><b>Stef De Sabbata</b>, University of Leicester</p>
-          <p><b>Géraldine DEL Mondo</b>, Laboratoire d'Informatique, de Traitement de l'Information et des Systèmes</p>
-          <p><b>Urska Demsar</b>, University of St. Andrews</p>
-          <p><b>Somayeh Dodge</b>, University of California</p>
-          <p><b>Matt Duckham</b>, Royal Melbourne Institute of Technology</p>
+          <p>Hoda Allahbakhshi, University of Zurich</p>
+          <p>Clio Andris, Georgia Institute of Technology</p>
+          <p>Nathalie Aussenac-Gilles, Centre national de la recherche scientifique (CNRS)</p>
+          <p>Crystal Bae, University of Chicago</p>
+          <p>Michela Bertolotto, University College Dublin</p>
+          <p>Stefano Borgo, Consiglio Nazionale delle Ricerche</p>
+          <p>Boyan Brodaric, Natural Resources Canada</p>
+          <p>Vanessa Brum-Bastos, University of Canterbury</p>
+          <p>Gilberto Camara, Instituto Nacional de Pesquisas Espaciais</p>
+          <p>Adrijana Car, Fachhochschule Kärnten</p>
+          <p>Christophe Claramunt, Naval Academy Research Institute</p>
+          <p>Eliseo Clementini, University of Aquila</p>
+          <p>Andrew Crooks, State University of New York at Buffalo</p>
+          <p>Gamze Dane, Eindhoven University of Technology</p>
+          <p>Leila De Floriani, University of Maryland, College Park</p>
+          <p>Stef De Sabbata, University of Leicester</p>
+          <p>Géraldine DEL Mondo, Laboratoire d'Informatique, de Traitement de l'Information et des Systèmes</p>
+          <p>Urska Demsar, University of St. Andrews</p>
+          <p>Somayeh Dodge, University of California</p>
+          <p>Matt Duckham, Royal Melbourne Institute of Technology</p>
         </div>
       </div>
 
       <!-- Column 2 -->
       <div class="col-lg-4 col-md-5">
         <div class="member-info">
-          <p><b>Sara Fabrikant</b>, University of Zurich</p>
-          <p><b>Zoe Falomir</b>, Umea University</p>
-          <p><b>Gabriele Filomena</b>, University of Liverpool</p>
-          <p><b>Mark Gahegan</b>, University of Auckland</p>
-          <p><b>Amy Griffin</b>, Royal Melbourne Institute of Technology</p>
-          <p><b>Maria M. Hedblom</b>, Universität Bremen</p>
-          <p><b>Christopher Hilton</b>, Technische Universität Berlin</p>
-          <p><b>Arvid Horned</b>, Umea University</p>
-          <p><b>Yingjie Hu</b>, State University of New York at Buffalo</p>
-          <p><b>Toru Ishikawa</b>, Toyo University</p>
-          <p><b>Krzysztof Janowicz</b>, Universität Vienna</p>
-          <p><b>Markus Kattenbeck</b>, Technische Universität Wien</p>
-          <p><b>Carsten Keßler</b>, Bochum University of Applied Sciences</p>
-          <p><b>Peter Kiefer</b>, ETH Zurich</p>
-          <p><b>Alexander Klippel</b>, Wageningen University and Research</p>
-          <p><b>Manolis Koubarakis</b>, National and Kapodistrian University of Athens</p>
-          <p><b>Christian Kray</b>, University of Münster</p>
-          <p><b>Saskia Kuliga</b>, Deutsches Zentrum für Neurodegenerative Erkrankungen</p>
-          <p><b>Rui Li</b>, State University of New York at Albany</p>
-          <p><b>Bernd Ludwig</b>, Universität Regensburg</p>
+          <p>Sara Fabrikant, University of Zurich</p>
+          <p>Zoe Falomir, Umea University</p>
+          <p>Gabriele Filomena, University of Liverpool</p>
+          <p>Mark Gahegan, University of Auckland</p>
+          <p>Amy Griffin, Royal Melbourne Institute of Technology</p>
+          <p>Maria M. Hedblom, Universität Bremen</p>
+          <p>Christopher Hilton, Technische Universität Berlin</p>
+          <p>Arvid Horned, Umea University</p>
+          <p>Yingjie Hu, State University of New York at Buffalo</p>
+          <p>Toru Ishikawa, Toyo University</p>
+          <p>Krzysztof Janowicz, Universität Vienna</p>
+          <p>Markus Kattenbeck, Technische Universität Wien</p>
+          <p>Carsten Keßler, Bochum University of Applied Sciences</p>
+          <p>Peter Kiefer, ETH Zurich</p>
+          <p>Alexander Klippel, Wageningen University and Research</p>
+          <p>Manolis Koubarakis, National and Kapodistrian University of Athens</p>
+          <p>Christian Kray, University of Münster</p>
+          <p>Saskia Kuliga, Deutsches Zentrum für Neurodegenerative Erkrankungen</p>
+          <p>Rui Li, State University of New York at Albany</p>
+          <p>Bernd Ludwig, Universität Regensburg</p>
         </div>
       </div>
 
       <!-- Column 3 -->
       <div class="col-lg-4 col-md-5">
         <div class="member-info">
-          <p><b>Ed Manley</b>, University of Leeds</p>
-          <p><b>Grant McKenzie</b>, McGill University</p>
-          <p><b>Sara Migliorini</b>, University of Verona</p>
-          <p><b>Franz-Benjamin Mocnik</b>, Paris Lodron Universität Salzburg</p>
-          <p><b>Daniel R. Montello</b>, University of California</p>
-          <p><b>Antoni Moore</b>, University of Otago</p>
-          <p><b>Reinhard Moratz</b>, Westfälische Wilhelms-Universität Münster</p>
-          <p><b>Jeremy Morley</b>, University College London</p>
-          <p><b>Gerhard Navratil</b>, Technische Universität Wien</p>
-          <p><b>Eva Nuhn</b>, Universität Augsburg</p>
-          <p><b>Ross Purves</b>, University of Zurich</p>
-          <p><b>Tumasch Reichenbacher</b>, University of Zurich</p>
-          <p><b>Kai-Florian Richter</b>, Umea University</p>
-          <p><b>Johannes Scholz</b>, Paris Lodron Universität Salzburg</p>
-          <p><b>Angela Schwering</b>, University of Münster</p>
-          <p><b>Tabea Sonnenschein</b>, Utrecht University</p>
-          <p><b>Emmanuel Stefanakis</b>, University of Calgary</p>
-          <p><b>John G. Stell</b>, University of Leeds</p>
-          <p><b>Kathleen Stewart</b>, University of Maryland, College Park</p>
-          <p><b>Henrikki Tenkanen</b>, Aalto University</p>
-          <p><b>Nico Van de Weghe</b>, Universiteit Gent</p>
-          <p><b>Judith Verstegen</b>, Utrecht University</p>
-          <p><b>Zhangyu Wang</b>, University of Maine System</p>
-          <p><b>René Westerholt</b>, TU Dortmund</p>
-          <p><b>Stephan Winter</b>, University of Melbourne</p>
-          <p><b>Qi Ying</b>, University of Zurich</p>
-          <p><b>Donatella Zingaro</b>, University of Zurich</p>
-          <p><b>Rui Zhu</b>, University of Bristol</p>
-          <p><b>Chenyu Zuo</b>, Universität Augsburg</p>
+          <p>Ed Manley, University of Leeds</p>
+          <p>Grant McKenzie, McGill University</p>
+          <p>Sara Migliorini, University of Verona</p>
+          <p>Franz-Benjamin Mocnik, Paris Lodron Universität Salzburg</p>
+          <p>Daniel R. Montello, University of California</p>
+          <p>Antoni Moore, University of Otago</p>
+          <p>Reinhard Moratz, Westfälische Wilhelms-Universität Münster</p>
+          <p>Jeremy Morley, University College London</p>
+          <p>Gerhard Navratil, Technische Universität Wien</p>
+          <p>Eva Nuhn, Universität Augsburg</p>
+          <p>Ross Purves, University of Zurich</p>
+          <p>Tumasch Reichenbacher, University of Zurich</p>
+          <p>Kai-Florian Richter, Umea University</p>
+          <p>Johannes Scholz, Paris Lodron Universität Salzburg</p>
+          <p>Angela Schwering, University of Münster</p>
+          <p>Tabea Sonnenschein, Utrecht University</p>
+          <p>Emmanuel Stefanakis, University of Calgary</p>
+          <p>John G. Stell, University of Leeds</p>
+          <p>Kathleen Stewart, University of Maryland, College Park</p>
+          <p>Henrikki Tenkanen, Aalto University</p>
+          <p>Nico Van de Weghe, Universiteit Gent</p>
+          <p>Judith Verstegen, Utrecht University</p>
+          <p>Zhangyu Wang, University of Maine System</p>
+          <p>René Westerholt, TU Dortmund</p>
+          <p>Stephan Winter, University of Melbourne</p>
+          <p>Qi Ying, University of Zurich</p>
+          <p>Donatella Zingaro, University of Zurich</p>
+          <p>Rui Zhu, University of Bristol</p>
+          <p>Chenyu Zuo, Universität Augsburg</p>
         </div>
       </div>
 
     </div>
   </div>
 </section>
+
 
 
     <!-- Sponsors Section -->
