--- a/index.html
+++ b/index.html
@@ -1407,33 +1407,36 @@
           <p>Stefano Borgo, Consiglio Nazionale delle Ricerche</p>
           <p>Boyan Brodaric, Natural Resources Canada</p>
           <p>Vanessa Brum-Bastos, University of Canterbury</p>
+          <p>Guoray Cai, Pennsylvania State University</p>
           <p>Gilberto Camara, Instituto Nacional de Pesquisas Espaciais</p>
           <p>Adrijana Car, Fachhochschule Kärnten</p>
           <p>Christophe Claramunt, Naval Academy Research Institute</p>
           <p>Eliseo Clementini, University of Aquila</p>
           <p>Andrew Crooks, State University of New York at Buffalo</p>
           <p>Gamze Dane, Eindhoven University of Technology</p>
-          <p>Leila De Floriani, University of Maryland, College Park</p>
+          <p>Leila De Floriani, University of Maryland</p>
           <p>Stef De Sabbata, University of Leicester</p>
           <p>Géraldine DEL Mondo, Laboratoire d'Informatique, de Traitement de l'Information et des Systèmes</p>
           <p>Urska Demsar, University of St. Andrews</p>
           <p>Somayeh Dodge, University of California</p>
+          <p>Heshan Du, University of Nottingham Ningbo China</p>
           <p>Matt Duckham, Royal Melbourne Institute of Technology</p>
+          <p>Sara Fabrikant, University of Zurich</p>
+          <p>Zoe Falomir, Umea University</p>
+          <p>Gabriele Filomena, University of Liverpool</p>
         </div>
       </div>
 
       <!-- Column 2 -->
       <div class="col-lg-4 col-md-5">
         <div class="member-info">
-          <p>Sara Fabrikant, University of Zurich</p>
-          <p>Zoe Falomir, Umea University</p>
-          <p>Gabriele Filomena, University of Liverpool</p>
+          <p>John G. Stell, University of Leeds</p>
           <p>Mark Gahegan, University of Auckland</p>
           <p>Amy Griffin, Royal Melbourne Institute of Technology</p>
-          <p>Maria M. Hedblom, Universität Bremen</p>
           <p>Christopher Hilton, Technische Universität Berlin</p>
           <p>Arvid Horned, Umea University</p>
           <p>Yingjie Hu, State University of New York at Buffalo</p>
+          <p>Carolynne Hultquist, University of Canterbury</p>
           <p>Toru Ishikawa, Toyo University</p>
           <p>Krzysztof Janowicz, Universität Vienna</p>
           <p>Markus Kattenbeck, Technische Universität Wien</p>
@@ -1445,30 +1448,31 @@
           <p>Saskia Kuliga, Deutsches Zentrum für Neurodegenerative Erkrankungen</p>
           <p>Rui Li, State University of New York at Albany</p>
           <p>Bernd Ludwig, Universität Regensburg</p>
+          <p>Maria M. Hedblom, Universität Bremen</p>
+          <p>Ed Manley, University of Leeds</p>
+          <p>Grant McKenzie, McGill University</p>
+          <p>Sara Migliorini, University of Verona</p>
+          <p>Franz-Benjamin Mocnik, Paris Lodron Universität Salzburg</p>
         </div>
       </div>
 
       <!-- Column 3 -->
       <div class="col-lg-4 col-md-5">
         <div class="member-info">
-          <p>Ed Manley, University of Leeds</p>
-          <p>Grant McKenzie, McGill University</p>
-          <p>Sara Migliorini, University of Verona</p>
-          <p>Franz-Benjamin Mocnik, Paris Lodron Universität Salzburg</p>
-          <p>Daniel R. Montello, University of California</p>
           <p>Antoni Moore, University of Otago</p>
           <p>Reinhard Moratz, Westfälische Wilhelms-Universität Münster</p>
-          <p>Jeremy Morley, University College London</p>
+          <p>Jeremy Morley, Hon Prof, University College London</p>
+          <p>Till Mossakowski, Universität Osnabrück</p>
           <p>Gerhard Navratil, Technische Universität Wien</p>
           <p>Eva Nuhn, Universität Augsburg</p>
           <p>Ross Purves, University of Zurich</p>
+          <p>Daniel R. Montello, University of California</p>
           <p>Tumasch Reichenbacher, University of Zurich</p>
           <p>Kai-Florian Richter, Umea University</p>
           <p>Johannes Scholz, Paris Lodron Universität Salzburg</p>
           <p>Angela Schwering, University of Münster</p>
           <p>Tabea Sonnenschein, Utrecht University</p>
           <p>Emmanuel Stefanakis, University of Calgary</p>
-          <p>John G. Stell, University of Leeds</p>
           <p>Kathleen Stewart, University of Maryland, College Park</p>
           <p>Henrikki Tenkanen, Aalto University</p>
           <p>Nico Van de Weghe, Universiteit Gent</p>
@@ -1478,7 +1482,6 @@
           <p>Stephan Winter, University of Melbourne</p>
           <p>Qi Ying, University of Zurich</p>
           <p>Donatella Zingaro, University of Zurich</p>
-          <p>Rui Zhu, University of Bristol</p>
           <p>Chenyu Zuo, Universität Augsburg</p>
         </div>
       </div>
@@ -1486,6 +1489,7 @@
     </div>
   </div>
 </section>
+
 
 
 
