--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
 
         <p><b>Activities that can fit into a 45 minute or 1.5 hour long session are welcome</b>. Thematic session organisers, speakers, and 
           participants need to be registered for the main conference to attend. To submit a proposal, please <a href="https://forms.gle/DCvB49pNUqBVimH26" target="_blank">complete this form</a> 
-          by Friday, February 13<sup>th</sup>, 2026. Decisions will be made on March 6<sup>th</sup>, 2026. Please direct any questions 
+          by Friday, February <s>13<sup>th</sup></s> 27<sup>th</sup>, 2026. Decisions will be made on March 6<sup>th</sup>, 2026. Please direct any questions 
           regarding thematic sessions to Dr. Clio Andris at <a href="mailto:clio@gatech.edu">clio@gatech.edu</a>.<br>
         </p>
       </div>
@@ -899,7 +899,7 @@
 
         <p>Short paper decision: May 15, 2026<br></p>
 
-        <p>Thematic sessions proposals: February 13, 2026<br></p>
+        <p>Thematic sessions proposals: <s>February 13, 2026</s> February 27, 2026<br></p>
 
         <p>Thematic sessions decision: March 6, 2026<br></p>
 
