--- a/index.html
+++ b/index.html
@@ -1439,6 +1439,7 @@
           <p>Carolynne Hultquist, University of Canterbury</p>
           <p>Toru Ishikawa, Toyo University</p>
           <p>Krzysztof Janowicz, Universität Vienna</p>
+          <p>Armand Kapaj, University of Zurich</p>
           <p>Markus Kattenbeck, Technische Universität Wien</p>
           <p>Carsten Keßler, Bochum University of Applied Sciences</p>
           <p>Peter Kiefer, ETH Zurich</p>
