full_paper_deadline

--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
       </style>
       <div class="container section-title" data-aos="fade-up">
         <h2>Important Dates<br></h2>
-        <p>Full paper submission: February 20, 2026<br></p>
+        <p>Full paper submission: <s>February 20, 2026</s> February 27, 2026<br></p>
 
         <p>Full paper decision: April 10, 2026<br></p>
 
