--- a/index.html
+++ b/index.html
@@ -891,6 +891,8 @@
       </style>
       <div class="container section-title" data-aos="fade-up">
         <h2>Important Dates<br></h2>
+        <p><b>Please note that all the COSIT 2026 submission deadlines follow the AoE (<a href="https://time.is/Anywhere_on_Earth" target="_blank">Anywhere on Earth</a>) time zone!</b><br></p>
+
         <p>Full paper submission: <s>February 20, 2026</s> February 27, 2026<br></p>
 
         <p>Full paper decision: April 10, 2026<br></p>
