--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
 
         <p>Journal article / book presentation decision: May 29, 2026<br></p>
         <p><br></p>
-        <p><b>Please note that all the COSIT 2026 submission deadlines follow the AoE (<a href="https://time.is/Anywhere_on_Earth" target="_blank">Anywhere on Earth</a>) time zone!</b><br></p>
+        <p><b>Note: all the COSIT 2026 submission deadlines follow the AoE (<a href="https://time.is/Anywhere_on_Earth" target="_blank">Anywhere on Earth</a>) time zone!</b><br></p>
 
       </div>
     </section>
